--- a/11.02/css/main.css
+++ b/11.02/css/main.css
@@ -55,8 +55,8 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: #fff;
-    font-family: "Motnserrat";
+    color: #000;
+    font-family: "Montserrat";
     font-size: 14px;
 }
 
@@ -77,7 +77,12 @@ a:hover {
     text-decoration: none;
 }
 
+.section {
+    padding: 91px 250px;
+}
+
 .main {
+    color: #fff;
     background: linear-gradient(to top, rgba(252, 227, 138, 0.9) 0%, rgba(243, 129, 129, 0.9) 100%),
                 url(../image/eagle.jpg) no-repeat center;
     background-size: cover;
@@ -171,3 +176,92 @@ h1:before {
     font-size: 24px;
 }
 
+        /*****    What we do section    *****/
+
+
+.aim {
+    color: #333333;
+    font-family: "Kaushan Script";
+    font-size: 24px;
+}
+
+.title {
+    position: relative;
+    color: #333333;
+    font-family: Montserrat;
+    font-size: 30px;
+    padding-bottom: 90px;
+}
+
+.title:before {
+    content: "";
+    position: absolute;
+    width: 60px;
+    height: 3px;
+    background-color: #f38181;
+    bottom: 40px;
+    left: 50%;
+    transform: translate(-50%, 0);
+
+}
+
+.section {
+    padding: 91px 0 120px 0;
+}
+
+.text {
+    color: #999999;
+    font-family: Roboto;
+    font-size: 15px;
+}
+
+.image {
+    position: relative;
+}
+
+.image:after {
+    content: "";
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to top, rgba(252, 227, 138, 0.9) 0%, rgba(243, 129, 129, 0.9) 100%);
+    transition: display 0.3s ease;
+}
+
+.image:hover {
+    box-shadow: 10px 10px 0px 0px #95e1d3;
+    transform: translate(0px, -10px);
+}
+
+.image:hover:after {
+    display: block;
+}
+
+.image:hover .block-info {  //don't work
+    display: none;
+}
+
+.block-info {
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    color: #fff;
+}
+
+.block-info img{
+    width: 32px;
+    height: 23px;
+    margin-bottom: 11px;
+}
+
+.block-info p {
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
