--- a/11.02/css/main.css
+++ b/11.02/css/main.css
@@ -44,6 +44,16 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon/fonts/icomoon.eot') format('embedded-opentype'),
+    url('../fonts/icomoon/fonts/icomoon.ttf') format('truetype'),
+    url('../fonts/icomoon/fonts/icomoon.woff') format('woff'),
+    url('../fonts/icomoon/fonts/icomoon.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /*****    Main styles  ******/
 html {
     font-size: 16px;
@@ -252,7 +262,7 @@ h1:before {
     color: #fff;
 }
 
-.block-info img{
+.block-info span {
     width: 32px;
     height: 23px;
     margin-bottom: 11px;
@@ -295,3 +305,136 @@ h1:before {
     text-transform: uppercase;
 }
 
+/****     We work with block   ***/
+
+.col-item {
+    display: flex;
+    padding: 1.5rem;
+}
+
+.col-item span {
+    font-size: 31px;
+    color: #95e1d3;
+    margin-right: 25px;
+}
+
+.col-item h4 {
+    color: #333333;
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-bottom: 22px;
+}
+
+.col-item p {
+    color: #999999;
+    font-family: Roboto;
+    font-size: 15px;
+    line-height: 24px;
+}
+
+.outline{
+    border: 1px solid #e5e5e5;
+}
+
+/*****   For all devices section    ******/
+
+.all-devices {
+    position: relative;
+    background: url("../image/background2.jpg") no-repeat center;
+    background-size: cover;
+    max-height: 850px;
+}
+
+.all-devices:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.85);
+}
+
+.all-devices-image {
+    position: relative;
+    left: 50%;
+    top: 32px;
+    transform: translate(-50%, 0);
+    width: 477px;
+}
+
+.second-image {
+    position: absolute;
+    bottom: -90px;
+    right: -180px;
+    width: 274px;
+    height: 476px;
+}
+
+/*****   Service section   ******/
+.card-header {
+    position: relative;
+}
+
+.card-header span {
+    color: #95e1d3;
+    height: 30px;
+}
+
+.card-header-style {
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+}
+
+.btn-style {
+    color: #333333;
+    font-family: Montserrat;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.card-style {
+    border: 1px solid #e5e5e5;
+}
+
+.card-header img {
+    position: absolute;
+    right: 14px;
+    top: 23px;
+    width: 22px;
+    height: 12px;
+}
+
+.card-body-style {
+    color: #999999;
+    font-family: "Roboto";
+    font-style: italic;
+    font-size: 15px;
+    line-height: 24px;
+}
+
+.arrow-show {
+    transform: rotate(180deg);
+}
+
+.text-scroll {
+    position: absolute;
+    top: 10%;
+    right: 10px;
+    width: 5px;
+    height: 80%;
+    border-radius: 3px;
+    background-color: #f5f5f5;
+}
+
+.text-scroll:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 5px;
+    height: 50%;
+    border-radius: 3px;
+    background-color: #95e1d3;
+}
