--- a/11.02/css/main.css
+++ b/11.02/css/main.css
@@ -46,10 +46,10 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:  url('../fonts/icomoon/fonts/icomoon.eot') format('embedded-opentype'),
-    url('../fonts/icomoon/fonts/icomoon.ttf') format('truetype'),
-    url('../fonts/icomoon/fonts/icomoon.woff') format('woff'),
-    url('../fonts/icomoon/fonts/icomoon.svg') format('svg');
+    src:  url('../fonts/icomoon/icomoon.eot') format('embedded-opentype'),
+    url('../fonts/icomoon/icomoon.ttf') format('truetype'),
+    url('../fonts/icomoon/icomoon.woff') format('woff'),
+    url('../fonts/icomoon/icomoon.svg') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -413,10 +413,6 @@ h1:before {
     line-height: 24px;
 }
 
-.arrow-show {
-    transform: rotate(180deg);
-}
-
 .text-scroll {
     position: absolute;
     top: 10%;
@@ -437,4 +433,76 @@ h1:before {
     height: 50%;
     border-radius: 3px;
     background-color: #95e1d3;
+}
+
+/*****  Line block-quote  *****/
+
+.line-block {
+    padding: 70px 0;
+    background-color: #f8f8f8;
+}
+
+.slider {
+    position: relative;
+    padding: 0 87px;
+}
+
+.slider span {
+    content: "";
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    display: block;
+    width: 12px;
+    height: 22px;
+}
+
+.slider .icon-arrow_right{
+    right: 10px;
+}
+
+.slider .icon-arrow_left {
+    left: 10px;
+}
+
+.box-icon {
+    border: 3px solid #95e1d3;
+    padding: 43px;
+    margin-right: 60px;
+}
+
+.box-icon img {
+    width: 63px;
+    height: 61px;
+}
+
+.quote_style {
+    border: none;
+    color: #999999;
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 36px;
+    font-style: italic;
+    padding: 0;
+}
+
+.author {
+    position: relative;
+    margin-left: 70px;
+    color: #333333;
+    font-family: "Kaushan Script";
+    font-size: 24px;
+}
+
+.author:before {
+    content: "";
+    position: absolute;
+    left: -70px;
+    top: 50%;
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: #f38181;
+    transform: translate(0, -50%);
 }
