--- a/Module_1/app/scss/_common_styles.scss
+++ b/Module_1/app/scss/_common_styles.scss
@@ -1,18 +1,47 @@
 /* --------------- BASIC SETTINGS ---------*/
+
 html {
   font-size: 10px;
   min-height: 100%;
   font-weight: normal;
   font-style: normal;
 }
+
 body {
   color: #000;
-  background-color: #fff;
+  font-family: "Georgia";
   text-align: left;
   font-size: 1rem;
+  background-color: $color-logo-part1;
   min-height: 100%;
 }
 
-img{
+img {
   max-width: 100%;
+}
+
+/*----------------COMMON STYLES-------------*/
+
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.section {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+%flex-row {
+  display: flex;
+}
+
+%flex-sb-cen {
+  justify-content: space-between;
+  align-items: center;
+}
+
+%flex-column {
+  display: flex;
+  flex-direction: column;
 }
