--- a/Module_1/app/scss/_variables.scss
+++ b/Module_1/app/scss/_variables.scss
@@ -1,1 +1,13 @@
+/*   Header   */
+
+$color-header-top: #1c1c1c;
+$color-logo-circle: #d54346;
+$color-logo-part1: #f8f8f8;
+$color-logo-part2: #333333;
+$color-logo-part3: #b2b2b2;
+$color-logo-line: #b2b2b2;
+$color-white: #ffffff;
+$color-search-input: #dddddd;
+
+
 
