--- a/Module_1/app/css/main.css
+++ b/Module_1/app/css/main.css
@@ -101,23 +101,7 @@ html {
   -webkit-text-size-adjust: none;
   -ms-text-size-adjust: none; }
 
-/* --------------- BASIC SETTINGS ---------*/
-html {
-  font-size: 10px;
-  min-height: 100%;
-  font-weight: normal;
-  font-style: normal; }
-
-body {
-  color: #000;
-  background-color: #fff;
-  text-align: left;
-  font-size: 1rem;
-  min-height: 100%; }
-
-img {
-  max-width: 100%; }
-
+/*   Header   */
 /******    Fonts    ******/
 @font-face {
   font-family: 'ArialMT';
@@ -140,3 +124,116 @@ img {
   src: url("../fonts/Georgia-Bold.eot") format("embedded-opentype");
   font-weight: 700;
   font-style: normal; }
+
+/* --------------- BASIC SETTINGS ---------*/
+html {
+  font-size: 10px;
+  min-height: 100%;
+  font-weight: normal;
+  font-style: normal; }
+
+body {
+  color: #000;
+  font-family: "Georgia";
+  text-align: left;
+  font-size: 1rem;
+  background-color: #f8f8f8;
+  min-height: 100%; }
+
+img {
+  max-width: 100%; }
+
+/*----------------COMMON STYLES-------------*/
+.container {
+  max-width: 1000px;
+  margin: 0 auto; }
+
+.section {
+  padding-right: 20px;
+  padding-left: 20px; }
+
+.header, .logo, .search-form {
+  display: flex; }
+
+.header, .logo {
+  justify-content: space-between;
+  align-items: center; }
+
+.header {
+  padding-top: 4.3%;
+  padding-bottom: 3.3%;
+  border: 1px solid black;
+  border-top: 10px solid #1c1c1c; }
+  @media screen and (max-width: 768px) {
+    .header {
+      flex-direction: column; } }
+
+@media screen and (max-width: 768px) {
+  .logo {
+    align-self: flex-start;
+    margin-bottom: 10px; } }
+
+@media screen and (max-width: 500px) {
+  .logo {
+    align-self: auto; } }
+
+.logo__name {
+  margin-right: 33px; }
+  @media screen and (max-width: 768px) {
+    .logo__name {
+      margin-right: 10px; } }
+
+.logo__name1, .logo__name2 {
+  display: inline-block;
+  text-transform: uppercase; }
+
+.logo__name1 {
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  line-height: 44px;
+  text-align: center;
+  color: #f8f8f8;
+  font-size: 16px;
+  border-radius: 50%;
+  background-color: #d54346; }
+
+.logo__name2 {
+  color: #333333;
+  font-size: 26px;
+  height: 44px;
+  line-height: 38px;
+  vertical-align: middle; }
+
+.logo__text {
+  height: 25px;
+  color: #b2b2b2;
+  font-size: 12px;
+  border-left: 1px solid #b2b2b2;
+  line-height: 25px;
+  padding-left: 10px;
+  vertical-align: middle; }
+
+@media screen and (max-width: 768px) {
+  .search-form {
+    align-self: flex-end; } }
+
+@media screen and (max-width: 500px) {
+  .search-form {
+    align-self: auto; } }
+
+.search-form > input[type="text"] {
+  padding: 10px 80px 10px 10px;
+  color: #7f7f7f;
+  font-size: 12px;
+  background-color: #fff;
+  border: 1px solid #dddddd; }
+
+.search-form > input[type="submit"] {
+  border: none;
+  padding: 10px;
+  color: #ffffff;
+  font-size: 12px;
+  text-transform: uppercase;
+  background-color: #d54346; }
