--- a/Module_1/app/scss/main.scss
+++ b/Module_1/app/scss/main.scss
@@ -1,5 +1,8 @@
 @import "normalize";
 @import "variables";
-@import "common_styles";
 @import "fonts";
+@import "common_styles";
+
+
+@import "header";
 
